fix tag list’s tag spacing

--- a/_scss/components/_component-lists.scss
+++ b/_scss/components/_component-lists.scss
@@ -140,3 +140,17 @@ dd {
     list-style: none;
   }
 }
+
+.tags__tag-list {
+    display: flex;
+    li {
+        display: flex;
+        margin-left: 0;
+        &:not(:first-child) {
+            margin-right: .125rem;
+        }
+        a {
+            margin-right: 0;
+        }
+    }
+}
